--- a/service-details_en.html
+++ b/service-details_en.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Expertise & Services — Albert NDOUR | Bioinformatique</title>
+  <title>Scientific Expertise & Bioinformatics — Albert NDOUR</title>
 
   <meta name="description"
-        content="Expertise en bioinformatique : transcriptomique, microbiome, pipelines reproductibles, data science et visualisation appliquées à la recherche biomédicale et environnementale.">
+        content="Scientific expertise in bioinformatics: transcriptomics, microbiome, reproducible pipelines, data science and visualization applied to biomedical and environmental research.">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -38,7 +38,7 @@
 
   <div class="profile-img">
     <img src="assets/img/Maphoto.jpeg"
-         alt="Photo de profil de Albert NDOUR"
+         alt="Profile picture of Albert NDOUR"
          class="img-fluid rounded-circle">
   </div>
 
@@ -67,18 +67,19 @@
        hreflang="en">EN</a>
   </div>
 
-  <nav id="navmenu" class="navmenu" aria-label="Navigation principale">
+  <nav id="navmenu" class="navmenu" aria-label="Main navigation">
     <ul>
       <li>
         <a href="index.html#hero">
-          <i class="bi bi-house navicon"></i> Accueil
+          <i class="bi bi-house navicon"></i> Home
         </a>
       </li>
       <li>
         <a href="values.html">
-          <i class="bi bi-tree navicon"></i> Valeurs
+            <i class="bi bi-tree navicon"></i> Values
         </a>
-      </li>
+       </li>
+
       <li>
         <a href="service-details.html" class="active" aria-current="page">
           <i class="bi bi-gear navicon"></i> Expertise
@@ -94,31 +95,31 @@
 <!-- ===== HERO TITLE ===== -->
 <div class="page-title dark-background service-hero">
   <div class="container d-lg-flex justify-content-between align-items-center">
-    <h1>Expertise scientifique & bioinformatique</h1>
+    <h1>Scientific Expertise & Bioinformatics</h1>
     <nav class="breadcrumbs">
       <ol>
-        <li><a href="index.html">Accueil</a></li>
+        <li><a href="index.html">Home</a></li>
         <li class="current">Expertise</li>
       </ol>
     </nav>
   </div>
 </div>
 
-<!-- ================= EXPERTISE INTRO ================= -->
+<!-- ================= INTRO ================= -->
 <section class="section">
   <div class="container section-title" data-aos="fade-up">
-    <h2>Positionnement scientifique</h2>
+    <h2>Scientific Positioning</h2>
     <p>
-      Mon travail s’inscrit à l’interface de la biologie, des mathématiques et de
-      l’informatique. Je développe et applique des approches bioinformatiques
-      rigoureuses pour l’analyse de données omiques complexes, avec un objectif
-      clair : produire des résultats robustes, interprétables et utiles à la
-      recherche biomédicale, environnementale et écologique.
+      My work lies at the intersection of biology, mathematics, and computer
+      science. I design and apply rigorous bioinformatics approaches for the
+      analysis of complex omics data, with a clear objective: producing robust,
+      interpretable, and meaningful results for biomedical, environmental, and
+      ecological research.
     </p>
   </div>
 </section>
 
-<!-- ================= SERVICES ================= -->
+<!-- ================= EXPERTISE AREAS ================= -->
 <section class="services section">
   <div class="container">
     <div class="row gy-4">
@@ -129,85 +130,90 @@
           <i class="bi bi-activity"></i>
         </div>
         <div>
-          <h4 class="title">Transcriptomique (RNA-seq & scRNA-seq)</h4>
+          <h4 class="title">Transcriptomics (RNA-seq & scRNA-seq)</h4>
           <p class="description">
-            Analyses transcriptomiques bulk et single-cell : contrôle qualité,
-            normalisation, analyse différentielle, clustering, annotation
-            fonctionnelle et interprétation biologique.
+            Bulk and single-cell transcriptomic analyses including quality
+            control, normalization, differential expression, clustering,
+            functional annotation, and biological interpretation.
           </p>
         </div>
       </div>
 
       <!-- Microbiome -->
-      <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="100">
+      <div class="col-lg-4 col-md-6 service-item d-flex"
+           data-aos="fade-up" data-aos-delay="100">
         <div class="icon flex-shrink-0">
           <i class="bi bi-diagram-3"></i>
         </div>
         <div>
-          <h4 class="title">Microbiome & métagénomique</h4>
+          <h4 class="title">Microbiome & Metagenomics</h4>
           <p class="description">
-            Analyses 16S / ITS (QIIME2, DADA2) : diversité alpha/bêta, taxonomie,
-            statistiques multivariées et intégration de métadonnées
-            environnementales et cliniques.
+            16S / ITS analyses using QIIME2 and DADA2, including alpha/beta
+            diversity, taxonomic profiling, multivariate statistics, and
+            integration of environmental and clinical metadata.
           </p>
         </div>
       </div>
 
       <!-- Pipelines -->
-      <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="200">
+      <div class="col-lg-4 col-md-6 service-item d-flex"
+           data-aos="fade-up" data-aos-delay="200">
         <div class="icon flex-shrink-0">
           <i class="bi bi-gear"></i>
         </div>
         <div>
-          <h4 class="title">Pipelines reproductibles</h4>
+          <h4 class="title">Reproducible Pipelines</h4>
           <p class="description">
-            Conception de pipelines bioinformatiques reproductibles intégrant
-            automatisation, gestion des dépendances, documentation et bonnes
-            pratiques FAIR, avec déploiement sur environnements HPC.
+            Design of reproducible bioinformatics pipelines integrating
+            automation, dependency management, documentation, FAIR principles,
+            and deployment on high-performance computing environments.
           </p>
         </div>
       </div>
 
       <!-- Data science -->
-      <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="300">
+      <div class="col-lg-4 col-md-6 service-item d-flex"
+           data-aos="fade-up" data-aos-delay="300">
         <div class="icon flex-shrink-0">
           <i class="bi bi-bar-chart-line"></i>
         </div>
         <div>
-          <h4 class="title">Data science & modélisation</h4>
+          <h4 class="title">Data Science & Modeling</h4>
           <p class="description">
-            Analyses statistiques avancées et méthodes de machine learning
-            appliquées à des données biologiques et environnementales pour
-            l’exploration, la classification et la modélisation prédictive.
+            Advanced statistical analyses and machine learning methods applied
+            to biological and environmental datasets for exploration,
+            classification, and predictive modeling.
           </p>
         </div>
       </div>
 
-      <!-- Visualisation -->
-      <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="400">
+      <!-- Visualization -->
+      <div class="col-lg-4 col-md-6 service-item d-flex"
+           data-aos="fade-up" data-aos-delay="400">
         <div class="icon flex-shrink-0">
           <i class="bi bi-pie-chart"></i>
         </div>
         <div>
-          <h4 class="title">Visualisation & reporting scientifique</h4>
+          <h4 class="title">Visualization & Scientific Reporting</h4>
           <p class="description">
-            Figures publication-ready, tableaux de bord interactifs (R Shiny),
-            rapports reproductibles et supports clairs pour la recherche et la
-            prise de décision.
+            Publication-ready figures, interactive dashboards (R Shiny),
+            reproducible reports, and clear data communication for research and
+            decision-making.
           </p>
         </div>
       </div>
 
       <!-- Support -->
-      <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="500">
+      <div class="col-lg-4 col-md-6 service-item d-flex"
+           data-aos="fade-up" data-aos-delay="500">
         <div class="icon flex-shrink-0">
           <i class="bi bi-mortarboard"></i>
         </div>
         <div>
-          <h4 class="title">Accompagnement scientifique</h4>
+          <h4 class="title">Scientific Support & Mentoring</h4>
           <p class="description">
-            Aide à la conception expérimentale, relecture méthodologique,
-            support bioinformatique et accompagnement de projets de recherche.
+            Experimental design assistance, methodological review, bioinformatics
+            support, and tailored training for research projects.
           </p>
         </div>
       </div>
@@ -216,55 +222,56 @@
   </div>
 </section>
 
-<!-- ================= APPROACH & VISION ================= -->
+<!-- ================= VISION ================= -->
 <section class="section">
   <div class="container">
     <div class="row gy-4">
 
       <div class="col-lg-4" data-aos="fade-up">
         <div class="vision-box">
-          <h4>Vision & engagement</h4>
+          <h4>Vision & Commitment</h4>
           <p>
             <strong>
-              La bioinformatique est pour moi un levier scientifique et
-              technologique au service du vivant.
+              Bioinformatics is, to me, a scientific and technological lever in
+              the service of life sciences.
             </strong>
           </p>
           <p>
-            Mon parcours, de la géoscience à la bioinformatique, m’a conduit à
-            développer une approche intégrative des données biologiques et
-            environnementales.
+            My academic journey, from geosciences to bioinformatics, has led me
+            to develop an integrative approach to biological and environmental
+            data, combining quantitative rigor, biological insight, and advanced
+            computational tools.
           </p>
           <p>
-            À long terme, mon objectif est de contribuer à l’émergence d’une
-            bioinformatique africaine structurée, connectée aux enjeux locaux
-            et capable de soutenir des décisions éclairées en santé publique,
-            agriculture durable et écologie.
+            In the long term, my goal is to contribute to the emergence of a
+            structured African bioinformatics ecosystem, connected to local
+            challenges and capable of supporting informed decision-making in
+            public health, sustainable agriculture, and ecology.
           </p>
         </div>
       </div>
 
       <div class="col-lg-8" data-aos="fade-up" data-aos-delay="100">
         <img src="assets/img/MesCompetencesBioinfos.png"
-             alt="Expertise bioinformatique et analyses omiques"
+             alt="Bioinformatics expertise and omics data analysis"
              class="img-fluid services-img mb-4">
 
-        <h3>Une approche rigoureuse et reproductible</h3>
+        <h3>A rigorous and reproducible approach</h3>
 
         <ul class="list-adn">
-          <li><strong>Transcriptomique</strong> : RNA-seq et scRNA-seq</li>
-          <li><strong>Microbiome</strong> : analyses de diversité et intégration multi-données</li>
-          <li><strong>Pipelines</strong> : workflows automatisés et reproductibles</li>
-          <li><strong>Visualisation</strong> : exploration interactive et reporting scientifique</li>
-          <li><strong>Modélisation</strong> : data science appliquée au vivant</li>
+          <li><strong>Transcriptomics</strong>: RNA-seq and scRNA-seq analyses</li>
+          <li><strong>Microbiome</strong>: diversity analysis and multi-data integration</li>
+          <li><strong>Pipelines</strong>: automated and reproducible workflows</li>
+          <li><strong>Visualization</strong>: interactive exploration and reporting</li>
+          <li><strong>Modeling</strong>: data science applied to life sciences</li>
         </ul>
 
         <p>
-          Ces compétences ont été développées et mises en œuvre dans des contextes
-          académiques et de recherche appliquée (INRAE, LBBE, CRCL), avec un fort
-          accent sur la reproductibilité, l’interprétabilité des résultats et la
-          collaboration interdisciplinaire. Elles constituent aujourd’hui le
-          socle de mon engagement scientifique à long terme.
+          These skills have been developed and applied in academic and applied
+          research environments (INRAE, LBBE, CRCL), with a strong emphasis on
+          reproducibility, result interpretability, and interdisciplinary
+          collaboration. They now form the foundation of my long-term scientific
+          commitment.
         </p>
       </div>
 
@@ -277,7 +284,7 @@
 <!-- ================= FOOTER ================= -->
 <footer id="footer" class="footer light-background">
   <div class="container text-center">
-    <p>© <strong>Albert NDOUR</strong> — Tous droits réservés</p>
+    <p>© <strong>Albert NDOUR</strong> — All rights reserved</p>
   </div>
 </footer>
 
