--- a/index.html
+++ b/index.html
@@ -159,43 +159,53 @@
   </div>
 
   <!-- Menu principal -->
-  <nav id="navmenu" class="navmenu" aria-label="Navigation principale">
-      <ul>
-        <li>
-          <a href="#hero" class="active" aria-current="page">
-            <i class="bi bi-house navicon"></i> Accueil
-          </a>
-        </li>
-        <li>
-          <a href="#about">
-            <i class="bi bi-person navicon"></i> À propos
-          </a>
-        </li>
-        <li>
-          <a href="#resume">
-            <i class="bi bi-file-earmark-text navicon"></i> CV
-          </a>
-        </li>
-        <li>
-          <a href="#portfolio">
-            <i class="bi bi-images navicon"></i> Portfolio
-          </a>
-        </li>
+ <nav id="navmenu" class="navmenu" aria-label="Navigation principale">
+  <ul>
+    <li>
+      <a href="#hero" class="active" aria-current="page">
+        <i class="bi bi-house navicon"></i> Accueil
+      </a>
+    </li>
 
-        <!-- NOUVEAU LIEN -->
-        <li>
-          <a href="service-details.html" class="active" aria-current="page">
-            <i class="bi bi-gear navicon"></i> Services
-          </a>
-        </li>
+    <li>
+      <a href="#about">
+        <i class="bi bi-person navicon"></i> À propos
+      </a>
+    </li>
 
-        <li>
-          <a href="#contact">
-            <i class="bi bi-envelope navicon"></i> Contact
-          </a>
-        </li>
-      </ul>
-    </nav>
+    <li>
+      <a href="#resume">
+        <i class="bi bi-file-earmark-text navicon"></i> CV
+      </a>
+    </li>
+
+    <li>
+      <a href="#portfolio">
+        <i class="bi bi-images navicon"></i> Portfolio
+      </a>
+    </li>
+
+    <!-- 🌳 VALEURS -->
+    <li>
+      <a href="values.html">
+        <i class="bi bi-tree navicon"></i> Valeurs
+      </a>
+    </li>
+
+    <li>
+      <a href="service-details.html">
+        <i class="bi bi-gear navicon"></i> Services
+      </a>
+    </li>
+
+    <li>
+      <a href="#contact">
+        <i class="bi bi-envelope navicon"></i> Contact
+      </a>
+    </li>
+  </ul>
+</nav>
+
 
 
   <!-- Horloge -->
@@ -316,11 +326,27 @@
         </div>
         <!-- Petit texte de conclusion (remplace le lorem ipsum) -->
         <div class="mt-3">
-          <p class="mb-0">
-            Je crois en la bioinformatique comme passerelle entre science, technologie et impact sociétal.
-            Mon parcours s’inscrit dans une vision à long terme : participer à l’avancement de la recherche biomédicale et écologique,
-            et fonder une plateforme africaine de bioinformatique capable d’apporter des solutions concrètes aux défis sanitaires et environnementaux.
-          </p>
+          <div class="vision-box">
+            <h4>Vision & engagement</h4>
+
+            <p>
+              <strong>La bioinformatique est pour moi un levier scientifique et technologique
+              au service du vivant.</strong>
+            </p>
+
+            <p>
+              Formé à l’analyse de données omiques et aux méthodes quantitatives, je développe
+              des outils et des pipelines visant à produire des résultats robustes,
+              interprétables et utiles à la recherche biomédicale et environnementale.
+            </p>
+
+            <p>
+              Mon projet à long terme est de contribuer à l’émergence d’une
+              <strong>bioinformatique africaine structurée</strong>, connectée aux enjeux
+              locaux et capable de soutenir des décisions éclairées en santé publique,
+              en agriculture durable et en écologie.
+            </p>
+          </div>
         </div>
       </div>
     </div>
