--- a/index_en.html
+++ b/index_en.html
@@ -184,6 +184,11 @@
         </a>
       </li>
       <li>
+        <a href="values.html">
+          <i class="bi bi-tree navicon"></i> Values
+        </a>
+      </li>
+      <li>
         <a href="service-details.html" class="active" aria-current="page">
           <i class="bi bi-gear navicon"></i> Services
         </a>
@@ -338,14 +343,28 @@
             </div>
 
             <!-- CLOSING PARAGRAPH -->
-            <div class="mt-3">
-              <p class="mb-0">
-                I view bioinformatics as a bridge between science, technology and societal impact.
-                My long-term vision is to contribute to advances in biomedical and ecological research,
-                while building an African bioinformatics platform capable of delivering concrete solutions
-                to major health and environmental challenges.
+            <div class="vision-box">
+              <h4>Vision & Commitment</h4>
+
+              <p>
+                <strong>Bioinformatics is, to me, a scientific and technological lever in the
+                service of life sciences.</strong>
+              </p>
+
+              <p>
+                Trained in omics data analysis and quantitative methods, I develop tools and
+                pipelines aimed at producing robust, interpretable, and actionable results
+                for biomedical and environmental research.
+              </p>
+
+              <p>
+                My long-term goal is to contribute to the emergence of a
+                <strong>structured African bioinformatics ecosystem</strong>, connected to
+                local challenges and capable of supporting informed decision-making in
+                public health, sustainable agriculture, and ecology.
               </p>
             </div>
+
 
           </div>
         </div>
@@ -883,147 +902,7 @@
     <!-- ================== /Portfolio Section ================== -->
 
     <!-- ================== Services Section ================== -->
-    <section id="services" class="services section">
-
-      <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
-        <h2>Services</h2>
-        <p>
-          J’accompagne chercheurs, laboratoires et projets interdisciplinaires
-          dans l’analyse, l’interprétation et la valorisation de données biologiques
-          complexes, avec une approche rigoureuse, reproductible et orientée résultats.
-        </p>
-      </div>
-      <!-- End Section Title -->
-
-      <div class="container">
-        <div class="row gy-4">
-
-          <!-- RNA-seq -->
-          <div class="col-lg-4 col-md-6 service-item d-flex"
-              data-aos="fade-up" data-aos-delay="100">
-            <div class="icon flex-shrink-0">
-              <i class="bi bi-activity"></i>
-            </div>
-            <div>
-              <h4 class="title">
-                <a href="service-details.html#rnaseq" class="stretched-link">
-                  RNA-seq & Transcriptomics
-                </a>
-              </h4>
-              <p class="description">
-                Analyse bulk RNA-seq et scRNA-seq : contrôle qualité, normalisation,
-                analyses différentielles, annotation fonctionnelle et visualisations.
-              </p>
-            </div>
-          </div>
-          <!-- End Service Item -->
-
-          <!-- Microbiome -->
-          <div class="col-lg-4 col-md-6 service-item d-flex"
-              data-aos="fade-up" data-aos-delay="200">
-            <div class="icon flex-shrink-0">
-              <i class="bi bi-diagram-3"></i>
-            </div>
-            <div>
-              <h4 class="title">
-                <a href="service-details.html#microbiome" class="stretched-link">
-                  Microbiome & Métagénomique
-                </a>
-              </h4>
-              <p class="description">
-                Analyses 16S / ITS avec QIIME2 & DADA2 :
-                diversité alpha/bêta, taxonomie, statistiques multivariées
-                et intégration de métadonnées environnementales.
-              </p>
-            </div>
-          </div>
-          <!-- End Service Item -->
-
-          <!-- Pipelines -->
-          <div class="col-lg-4 col-md-6 service-item d-flex"
-              data-aos="fade-up" data-aos-delay="300">
-            <div class="icon flex-shrink-0">
-              <i class="bi bi-gear"></i>
-            </div>
-            <div>
-              <h4 class="title">
-                <a href="service-details.html#pipelines" class="stretched-link">
-                  Pipelines reproductibles
-                </a>
-              </h4>
-              <p class="description">
-                Conception et automatisation de workflows bioinformatiques
-                avec Snakemake / Nextflow, gestion des dépendances et exécution HPC.
-              </p>
-            </div>
-          </div>
-          <!-- End Service Item -->
-
-          <!-- Data Science -->
-          <div class="col-lg-4 col-md-6 service-item d-flex"
-              data-aos="fade-up" data-aos-delay="400">
-            <div class="icon flex-shrink-0">
-              <i class="bi bi-bar-chart-line"></i>
-            </div>
-            <div>
-              <h4 class="title">
-                <a href="service-details.html#datascience" class="stretched-link">
-                  Data Science & Modélisation
-                </a>
-              </h4>
-              <p class="description">
-                Analyses statistiques, machine learning et modélisation prédictive
-                appliquées aux données biologiques et environnementales.
-              </p>
-            </div>
-          </div>
-          <!-- End Service Item -->
-
-          <!-- Visualisation -->
-          <div class="col-lg-4 col-md-6 service-item d-flex"
-              data-aos="fade-up" data-aos-delay="500">
-            <div class="icon flex-shrink-0">
-              <i class="bi bi-pie-chart"></i>
-            </div>
-            <div>
-              <h4 class="title">
-                <a href="service-details.html#visualisation" class="stretched-link">
-                  Visualisation & Reporting
-                </a>
-              </h4>
-              <p class="description">
-                Figures publication-ready, dashboards interactifs (R Shiny, Flask),
-                rapports clairs et reproductibles pour la recherche et la décision.
-              </p>
-            </div>
-          </div>
-          <!-- End Service Item -->
-
-          <!-- Accompagnement -->
-          <div class="col-lg-4 col-md-6 service-item d-flex"
-              data-aos="fade-up" data-aos-delay="600">
-            <div class="icon flex-shrink-0">
-              <i class="bi bi-mortarboard"></i>
-            </div>
-            <div>
-              <h4 class="title">
-                <a href="service-details.html#support" class="stretched-link">
-                  Accompagnement & Expertise
-                </a>
-              </h4>
-              <p class="description">
-                Aide à la conception expérimentale, relecture méthodologique,
-                support bioinformatique et formation personnalisée.
-              </p>
-            </div>
-          </div>
-          <!-- End Service Item -->
-
-        </div>
-      </div>
-
-    </section>
+    
     <!-- ================== /Services Section ================== -->
 
 
